--- a/Projeto/Projeto.css
+++ b/Projeto/Projeto.css
@@ -8,9 +8,20 @@
 	display: grid;
 	height: 93vh;
 	margin-top: 2%;
-	grid-template-columns: 7.5% 7.5% 7.5% 7.5% 7.5% 7.5% 7.5% 7.5%  7.5% ;
+	grid-template-columns: 7.5% 7.5% 7.5% 7.5% 7.5% 7.5% 7.5% 7.5% 7.5%;
 	grid-template-rows: 14% 14% 14% 14% 14% 14% 14%;
 
+}
+.main{
+	top: 2%;
+	left: 68%;
+	width: 50%;
+	height: 97%;
+	position: absolute;
+	background-color: lightblue;
+	text-align: center;
+	font-size: 18px;
+	font-family: Arial, Helvetica, sans-serif;
 }
 .Pos0{
 	display: grid;
