--- a/Projeto/Projeto.css
+++ b/Projeto/Projeto.css
@@ -36,7 +36,16 @@
 }
 .player{
 	position: absolute;
+	left: 70px;
 	background-color: black;
+    width: 60px;
+    height: 60px;
+    border-radius: 50%;
+
+}
+.player1{
+	position: absolute;
+	background-color: blue;
     width: 60px;
     height: 60px;
     border-radius: 50%;
