--- a/Projeto/Projeto.css
+++ b/Projeto/Projeto.css
@@ -93,6 +93,7 @@
 	border-style: solid;
 	border-color: black;
 	border-right: 0.2vw;
+	align-content: center;
 }
 .Pos4{
 	display: grid;
@@ -138,6 +139,7 @@
 	border-style: solid;
 	border-color: black;
 	border-width: 0.2vw;
+	align-content: center;
 }
 .Pos9{
 	display: grid;
@@ -167,7 +169,7 @@
 	border-style: solid;
 	border-color: black;
 	border-right: 0.2vw;
-
+	align-content: center;
 }
 .Pos13{
 	display: grid;
