--- a/Projeto/Projeto.css
+++ b/Projeto/Projeto.css
@@ -28,6 +28,27 @@
 	font-family: xilosa;
 	font-size: 48px;
 }
+.venceu{
+	background-color: rgba(0,0,0,0.5);
+	width: 100%;
+	height: 100%;
+	display: block;
+	position: absolute;
+	top: 0px;
+	left: 0px;
+	z-index: 12;
+	display: none;
+}
+.interna{
+	width: 700px;
+	height: 600px;
+	margin-top: 5%;
+	background-color: white;
+	border-radius: 15px;
+	display: block;
+	position: relative;
+	padding: 10px;
+}
 .perguntas{
 	font-family: Arial, Helvetica, sans-serif;
 	background-color: white;
