--- a/Projeto/Projeto.css
+++ b/Projeto/Projeto.css
@@ -56,10 +56,13 @@ p{
 .perguntas{
 	font-family: Arial, Helvetica, sans-serif;
 	background-color: white;
+	background-image: url(perguntas.svg); 
+	background-repeat: repeat;
 	margin-left: 5%;
 	margin-right: 5%;
 	width: 90%;
 	height: 35%;
+	overflow: auto; 
 }
 .player0{
 	position: absolute;
