--- a/Projeto/Projeto.css
+++ b/Projeto/Projeto.css
@@ -66,19 +66,15 @@ p{
 }
 .player0{
 	position: absolute;
-	left: 70px;
-	background-color: black;
-    width: 60px;
-    height: 60px;
-    border-radius: 50%;
-
+    width: 1vw;
+    height: auto;
+    z-index: 999;
 }
 .player1{
 	position: absolute;
-	background-color: blue;
-    width: 60px;
-    height: 60px;
-    border-radius: 50%;
+    width: 1vw;
+    height: auto;
+    z-index: 999;
 
 }
 .Pos0{
