--- a/Projeto/Projeto.css
+++ b/Projeto/Projeto.css
@@ -3,8 +3,21 @@
 	src: url(xilosa.ttf);
 }
 
+.radio{
+	height: 1.5vw;
+	width: 1.5vw;
+}
+
 p{
 	font-weight: bold;
+}
+
+#pagina{
+	background: url('mapa.jpg') center center no-repeat fixed; 
+	-webkit-background-size: cover;
+	-moz-background-size: cover; 
+	-o-background-size: cover; 
+	background-size: cover;
 }
 
 .tabuleiro{
@@ -17,20 +30,33 @@ p{
 
 }
 .main{
-	top: 2%;
+	top: 0%;
 	left: 68%;
 	width: 32%;
-	height: 97%;
+	height: 100%;
 	position: absolute;
-	background-color: lightblue;
 	text-align: center;
 	font-size: 18px;
-	font-family: Arial, Helvetica, sans-serif;
+	font-family: xilosa;
+	background-image: url(textura.jpg);
+	background-repeat: no-repeat;
+	background-size: cover;
+
 }
 
 .logo{
 	font-family: xilosa;
-	font-size: 48px;
+	font-size: 5vw;
+	color: brown;
+	position: relative;
+	height: 24%;
+	width: 40%;
+	background-image: url(logo1.svg);
+	background-repeat: no-repeat;
+	background-size: cover;
+	left: 30%;
+
+
 }
 .venceu{
 	background-color: rgba(0,0,0,0.5);
@@ -55,14 +81,17 @@ p{
 }
 .perguntas{
 	font-family: Arial, Helvetica, sans-serif;
-	background-color: white;
+	font-size: 1.4vw;
+	background-color: rgb(255, 255, 255, 0.5);
 	background-image: url(perguntas.svg); 
 	background-repeat: repeat;
 	margin-left: 5%;
 	margin-right: 5%;
 	width: 90%;
 	height: 35%;
-	overflow: auto; 
+	overflow: auto;
+	position: relative; 
+	background-size: cover;
 }
 .player0{
 	position: absolute;
