--- a/Projeto/Projeto.css
+++ b/Projeto/Projeto.css
@@ -3,6 +3,14 @@
 	src: url(xilosa.ttf);
 }
 
+.imgGanhador{
+	height: 90%;
+	width: auto;
+	top: 10%;
+	position: relative;
+	align-content: center;
+}
+
 .radio{
 	height: 1.5vw;
 	width: 1.5vw;
@@ -92,7 +100,9 @@ h1{
 	width: 45vw;
 	height: 40vw;
 	margin-top: 5%;
-	background-color: white;
+	background-image: url(backGanhador.jpg);
+	background-repeat: no-repeat;
+	background-size: cover;
 	border-radius: 15px;
 	display: block;
 	position: relative;
