--- a/Projeto.css
+++ b/Projeto.css
@@ -47,7 +47,7 @@ h1{
 }
 
 #pagina{
-	background: url('mapa.jpg') center center no-repeat fixed; 
+	background: url('Design/Backgrounds/mapa.jpg') center center no-repeat fixed; 
 	-webkit-background-size: cover;
 	-moz-background-size: cover; 
 	-o-background-size: cover; 
@@ -72,7 +72,7 @@ h1{
 	text-align: center;
 	font-size: 18px;
 	font-family: xilosa;
-	background-image: url(textura.jpg);
+	background-image: url(Design/textura.jpg);
 	background-repeat: no-repeat;
 	background-size: cover;
 
@@ -100,7 +100,7 @@ h1{
 	width: 45vw;
 	height: 40vw;
 	margin-top: 5%;
-	background-image: url(backGanhador.jpg);
+	background-image: url(Design/Backgrounds/backGanhador.jpg);
 	background-repeat: no-repeat;
 	background-size: cover;
 	border-radius: 15px;
@@ -141,7 +141,7 @@ h1{
 	font-family: Arial, Helvetica, sans-serif;
 	font-size: 1.4vw;
 	background-color: rgb(255, 255, 255, 0.5);
-	background-image: url(perguntas.svg); 
+	background-image: url(Design/perguntas.svg); 
 	background-repeat: repeat;
 	margin-left: 5%;
 	margin-right: 3%;
